--- a/Led.ioc
+++ b/Led.ioc
@@ -9,12 +9,15 @@ Mcu.IP3=TIM6
 Mcu.IPNb=4
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
-Mcu.Pin0=PD14
-Mcu.Pin1=PA13
-Mcu.Pin2=PA14
-Mcu.Pin3=VP_SYS_VS_Systick
-Mcu.Pin4=VP_TIM6_VS_ClockSourceINT
-Mcu.PinsNb=5
+Mcu.Pin0=PD12
+Mcu.Pin1=PD13
+Mcu.Pin2=PD14
+Mcu.Pin3=PD15
+Mcu.Pin4=PA13
+Mcu.Pin5=PA14
+Mcu.Pin6=VP_SYS_VS_Systick
+Mcu.Pin7=VP_TIM6_VS_ClockSourceINT
+Mcu.PinsNb=8
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -43,8 +46,22 @@ PCC.Seq0=0
 PCC.Series=STM32F4
 PCC.Temperature=25
 PCC.Vdd=3.3
+PD12.GPIOParameters=GPIO_Label
+PD12.GPIO_Label=LED_G
+PD12.Locked=true
+PD12.Signal=GPIO_Output
+PD13.GPIOParameters=GPIO_Label
+PD13.GPIO_Label=LED_O
+PD13.Locked=true
+PD13.Signal=GPIO_Output
+PD14.GPIOParameters=GPIO_Label
+PD14.GPIO_Label=LED_R
 PD14.Locked=true
 PD14.Signal=GPIO_Output
+PD15.GPIOParameters=GPIO_Label
+PD15.GPIO_Label=LED_B
+PD15.Locked=true
+PD15.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
