--- a/Led.ioc
+++ b/Led.ioc
@@ -9,15 +9,16 @@ Mcu.IP3=TIM6
 Mcu.IPNb=4
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
-Mcu.Pin0=PD12
-Mcu.Pin1=PD13
-Mcu.Pin2=PD14
-Mcu.Pin3=PD15
-Mcu.Pin4=PA13
-Mcu.Pin5=PA14
-Mcu.Pin6=VP_SYS_VS_Systick
-Mcu.Pin7=VP_TIM6_VS_ClockSourceINT
-Mcu.PinsNb=8
+Mcu.Pin0=PA0-WKUP
+Mcu.Pin1=PD12
+Mcu.Pin2=PD13
+Mcu.Pin3=PD14
+Mcu.Pin4=PD15
+Mcu.Pin5=PA13
+Mcu.Pin6=PA14
+Mcu.Pin7=VP_SYS_VS_Systick
+Mcu.Pin8=VP_TIM6_VS_ClockSourceINT
+Mcu.PinsNb=9
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -34,6 +35,10 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PA0-WKUP.GPIOParameters=GPIO_Label
+PA0-WKUP.GPIO_Label=SW
+PA0-WKUP.Locked=true
+PA0-WKUP.Signal=GPIO_Input
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
